--- a/CS/OS/2_프로세스_개요.md
+++ b/CS/OS/2_프로세스_개요.md
@@ -9,9 +9,9 @@
   - 프로그램: 동작을 하지 않는 정적, 수동적 개체
   - 프로세스: 동작을 하는 능동적 개체
 
-- 운영체제로부터 자원을 할당 받아 동작
+- 운영체제로부터 자원을 할당받아 동작
 
-  - 자원: CPU, 메모리, 입출력장치, 파일 등
+  - 자원: CPU, 메모리, 입출력 장치, 파일 등
   - 동작: CPU가 프로세스의 명령을 실행
 
 ### 프로세스(Process)와 운영체제(Operating System)
@@ -20,17 +20,17 @@
 
   - 프로세스를 생성 및 삭제
   - 프로세스 실행(CPU 할당)을 위한 스케줄 결정
-  - 프로세스의 상태를 관리하며 상태전이를 처리
+  - 프로세스의 상태를 관리하며 상태 전이를 처리
 
 ### 프로세스의 상태
 
-- 상태모델
+- 상태 모델
 
   - 생성: 처음 작업이 시스템에 주어진 상태
   - 준비: 실행 준비가 되어 CPU 할당을 기다리는 상태
   - 실행: 프로세스가 처리되는 상태
   - 종료: 모든 처리가 완료되어 사용자에게 반환되는 상태
-  - 대기: 프로세스가 특정 자원을 할당받을 때까지 또는 입출력(I/O, Input/Output) 작업이 끝날 떄까지 작업이 보류되는 상태
+  - 대기: 프로세스가 특정 자원을 할당받을 때까지 또는 입출력(I/O, Input/Output) 작업이 끝날 때까지 작업이 보류되는 상태
   - 디스패치(Dispatch): 준비단계에서 실행단계로 가는 과정
 
 ![프로세스 상태 변화](./images/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EC%9D%98_%EC%83%81%ED%83%9C_%EB%B3%80%ED%99%94.png)
@@ -86,7 +86,7 @@
   - 의미: 다른 프로세스의 영향을 받지 않고 주지도 않음
   - 프로세스 상태: 다른 프로세스와 공유하지 않음
   - 실행
-    - 결정적: 실행결과는 입력상태에 의해서만 결정
+    - 결정적: 실행결과는 입력 상태에 의해서만 결정
     - 재생 가능: 실행결과는 같은 입력에 대하여 항상 동일
     - 다른 프로세스와 무관하게 중단 및 재시작 가능
 
@@ -95,35 +95,35 @@
   - 의미: 다른 프로세스와 영향을 주고받음
   - 프로세스 상태: 다른 프로세스와 공유함
   - 실행
-    - 비결정적: 실행결과는 실행순서에 좌우되기 때문에 미리 예측할 수 없음
+    - 비결정적: 실행결과는 실행 순서에 좌우되기 때문에 미리 예측할 수 없음
     - 재생 불가능: 실행결과는 동일한 입력에 대하여 항상 동일치 않음. 매번 다른 결과가 도출
 
-### 쓰레드(Thread)
+### 스레드(Thread)
 
 - 전통적인 프로세스
 
   - 처리의 기본 단위
-  - 자원 소유의 단위(하나의 주소공간) 및 디스패칭의 단위(하나의 제어흐름)
-  - 단일 프로세스 내에서 동시처리 불가능. 즉, 병렬처리 불가능 -> **쓰레드** 등장
+  - 자원 소유의 단위(하나의 주소 공간) 및 디스패칭의 단위(하나의 제어 흐름)
+  - 단일 프로세스 내에서 동시처리 불가능. 즉, 병렬 처리 불가능 -> **스레드** 등장
 
-- **쓰레드(Thread)**
+- **스레드(Thread)**
 
   - 프로세스 내에서의 다중처리를 위해 제안된 개념
-  - 하나의 프로세스 내에는 하나 이상의 쓰레드가 존재
-  - 하나의 쓰레드 내에서는 하나의 실행점만 존재(**디스패칭의 단위**)
+  - 하나의 프로세스 내에는 하나 이상의 스레드가 존재
+  - 하나의 스레드 내에서는 하나의 실행점만 존재(**디스패칭의 단위**)
   - 실행에 필요한 최소한의 정보만을 가지며, 자신이 속해 있는 프로세스의 실행환경을 공유
 
-  ![쓰레드](./images/%EC%93%B0%EB%A0%88%EB%93%9C.png)
+  ![스레드](./images/%EC%8A%A4%EB%A0%88%EB%93%9C.png.png)
 
-  - 왼쪽 그림은 단일 쓰레드로 구성된 프로세스
-  - 으론쪽 그림은 3개의 쓰레드로 구성된 프로세스
+  - 왼쪽 그림은 단일 스레드로 구성된 프로세스
+  - 오른쪽 그림은 3개의 스레드로 구성된 프로세스
 
-- 다중 쓰레드의 장점
+- 다중 스레드의 장점
 
-  - 멀티CPU 혹은 멀티코어 시스템에서는 병렬처리 가능
-  - 처리 속도 별로 쓰레드가 나눠진 경우 효율적인 처리 가능
+  - 멀티 CPU 혹은 멀티코어 시스템에서는 병렬 처리 가능
+  - 처리 속도 별로 스레드가 나눠진 경우 효율적인 처리 가능
 
-  ![다중 쓰레드](./images/%EB%8B%A4%EC%A4%91_%EC%93%B0%EB%A0%88%EB%93%9C.png)
+  ![다중 스레드](./images/%EB%8B%A4%EC%A4%91_%EC%8A%A4%EB%A0%88%EB%93%9C.png.png)
 
 ### 스케줄링(Scheduling)
 
@@ -142,14 +142,14 @@
 
   - 시스템에 들어오는 작업들을 선택하여 프로세스를 생성한 후 프로세스 준비 큐에 전달
   - 선택 기준: 시스템의 자원을 효율적으로 이용할 수 있도록 하는 것
-  - 입출력(I/O) 중심 작업과 연산 중심 작업을 균형있게 선택
+  - 입출력(I/O) 중심 작업과 연산 중심 작업을 균형 있게 선택
 
 - 중간단계 스케줄링
 
   - 프로세스를 일시적으로 메모리에서 제거하여 중지시키거나 다시 활성화시킴
   - 시스템에 대한 단기적인 부하를 조절
 
-- 하위단계 스케줄링
+- 하위 단계 스케줄링
 
   - 사용 가능한 CPU를 준비상태의 어느 프로세스에게 배당할지를 결정
   - CPU를 배당받은 프로세스는 결국 실행상태가 되어 프로세스가 처리됨
@@ -159,14 +159,14 @@
 
   - **진행 중인 프로세스에 인터럽트(Interrupt)를 걸고 다른 프로세스에 CPU를 할당하는 스케줄링 전략**
   - 높은 우선순위의 프로세를 긴급하게 처리하는 경우에 유용
-  - 대화식 시분할 시스템에서 빠른 응답시간을 유지하는데 유용
+  - 대화식 시분할 시스템에서 빠른 응답 시간을 유지하는데 유용
   - 문맥 교환에 따른 오버헤드 발생
 
-    - 오버헤드(Overhead): 오버헤드란 프로그램의 실행흐름에서 나타나는 현상중 하나. 프로그램의 실행 흐름 도중에 동떨어진 위치의 코드를 실행시켜야 할 때, 추가적으로 시간, 메모리, 자원이 사용되는 현상.  
+    - 오버헤드(Overhead): 오버헤드란 프로그램의 실행 흐름에서 나타나는 현상중 하나. 프로그램의 실행 흐름 도중에 동떨어진 위치의 코드를 실행시켜야 할 때, 추가적으로 시간, 메모리, 자원이 사용되는 현상.  
       **즉, 오버헤드는 어떤 처리를 하기 위해 들어가는 간접적인 처리 시간, 메모리, 자원 등을 말함**
 
 - 비선점(Non-Preemptive) 스케줄링 정책
 
   - **프로세스가 CPU를 할당받아 실행이 시작되면 작업 자체가 I/O 인터럽트(Interrupt)를 걸거나 작업을 종료할 때까지 실행상태에 있게 됨**
-  - 모든 프로세스가 공정하게 순서에 따라 실행됨 -> 웅답시간 예측 가능
+  - 모든 프로세스가 공정하게 순서에 따라 실행됨 -> 웅답 시간 예측 가능
   - 짧은 프로세스가 긴 프로세스를 기다리게 될 수 있음
