--- a/CS/OS/2_프로세스_개요.md
+++ b/CS/OS/2_프로세스_개요.md
@@ -113,7 +113,7 @@
   - 하나의 스레드 내에서는 하나의 실행점만 존재(**디스패칭의 단위**)
   - 실행에 필요한 최소한의 정보만을 가지며, 자신이 속해 있는 프로세스의 실행환경을 공유
 
-  ![스레드](./images/%EC%8A%A4%EB%A0%88%EB%93%9C.png.png)
+  ![스레드](./images/%EC%8A%A4%EB%A0%88%EB%93%9C.png)
 
   - 왼쪽 그림은 단일 스레드로 구성된 프로세스
   - 오른쪽 그림은 3개의 스레드로 구성된 프로세스
@@ -123,7 +123,7 @@
   - 멀티 CPU 혹은 멀티코어 시스템에서는 병렬 처리 가능
   - 처리 속도 별로 스레드가 나눠진 경우 효율적인 처리 가능
 
-  ![다중 스레드](./images/%EB%8B%A4%EC%A4%91_%EC%8A%A4%EB%A0%88%EB%93%9C.png.png)
+  ![다중 스레드](./images/%EB%8B%A4%EC%A4%91_%EC%8A%A4%EB%A0%88%EB%93%9C.png)
 
 ### 스케줄링(Scheduling)
 
